Changed Descriptions + ES6 imports support

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "list-bot-test",
+  "name": "badging-bot",
   "version": "1.0.0",
   "private": true,
-  "description": "A Probot app",
+  "description": "A github app that automates some of the review processes for CHAOSS DEI Badging applications",
   "author": "Aastha Bist <abist119@gmail.com>",
   "license": "ISC",
-  "repository": "https://github.com/bistaastha/list-bot-test.git",
-  "homepage": "https://github.com/bistaastha/list-bot-test",
-  "bugs": "https://github.com/bistaastha/list-bot-test/issues",
+  "type": "module",
+  "repository": "https://github.com/badging/badging-bot.git",
+  "homepage": "https://github.com/badging/badging-bot",
+  "bugs": "https://github.com/badging/badging-bot/issues",
   "keywords": [
     "probot",
     "github",
@@ -21,6 +22,7 @@
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "beautify": "0.0.8",
     "fs": "0.0.1-security",
     "probot": "^9.15.1",
