--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "start": "node starter.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "nodemon content.js"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "localtunnel": "^2.0.2",
+    "node-fetch": "^3.2.3",
     "smee-client": "^1.2.2"
   },
   "devDependencies": {
