--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
     "test": "nodemon ./src/calculate.badge.js"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "body-parser": "^1.19.2",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "localtunnel": "^2.0.2",
-    "node-fetch": "^3.2.3",
-    "smee-client": "^1.2.2"
+    "axios": "0.26.1",
+    "body-parser": "1.19.2",
+    "dotenv": "16.0.0",
+    "express": "4.17.3",
+    "smee-client": "1.2.2"
   },
   "devDependencies": {
-    "ngrok": "^4.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "2.0.15"
   },
   "engines": {
     "node": ">= 8.3.0"
