--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "homepage": "https://github.com/badging/badging-bot",
   "bugs": "https://github.com/badging/badging-bot/issues",
   "scripts": {
+    "lint": "npx eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "npx prettier . --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "generate-content": "node content.js",
     "dev": "npm run generate-content && nodemon index.js",
     "start": "npm run generate-content && node index.js"
@@ -20,10 +25,26 @@
     "express": "4.17.3"
   },
   "devDependencies": {
+    "eslint": "8.13.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.7",
     "nodemon": "2.0.15",
+    "prettier": "2.6.2",
     "smee-client": "1.2.2"
   },
   "engines": {
     "node": ">= 8.3.0"
+  },
+  "lint-staged": {
+    ".": [
+        "npm run format"
+    ]
+},
+  "husky": {   
+    "hooks": {  
+       "pre-commit": "lint-staged"        
+     }   
   }
 }
