--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
     "generate-content": "node content.js",
-    "dev": "npm run generate-content && nodemon index.js",
-    "start": "npm run generate-content && node index.js"
+    "dev": "NODE_ENV=development PORT=5500 npm run generate-content && nodemon index.js",
+    "start": "NODE_ENV=production npm run generate-content && node index.js"
   },
   "dependencies": {
     "axios": "0.26.1",
