--- a/package.json
+++ b/package.json
@@ -14,15 +14,12 @@
     "prettier": "npx prettier . --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "generate-content": "node content.js",
-    "dev": "NODE_ENV=development PORT=5500 npm run generate-content && nodemon index.js",
-    "start": "NODE_ENV=production npm run generate-content && node index.js"
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js"
   },
   "dependencies": {
-    "axios": "0.26.1",
-    "body-parser": "1.19.2",
     "dotenv": "16.0.0",
-    "express": "4.17.3"
+    "octokit": "2.0.3"
   },
   "devDependencies": {
     "eslint": "8.13.0",
@@ -39,12 +36,12 @@
   },
   "lint-staged": {
     ".": [
-        "npm run format"
+      "npm run format"
     ]
-},
-  "husky": {   
-    "hooks": {  
-       "pre-commit": "lint-staged"        
-     }   
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
