--- a/.github/workflow/actions.yml
+++ b/.github/workflow/actions.yml
@@ -1,25 +1,51 @@
-name: CI
+name: Push to DockerHub
 
 on:
   push:
-    branches: [main]
+    branches:[main]
+
   pull_request:
-    branches: [main]
+    branches:[main]
 
 jobs:
   build:
+  - name: build docker image and push to DockerHub
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: uses node version ${{matrix.node-version}}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{matrix.node-version}}
+        cache: npm
 
-      - name: Build and push Docker Image(s)
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME}}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: badging/badging-bot
-          tag_with_ref: true
-          tag_with_sha: true
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test --if-present
 
+    - name: login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
+    - name: build docker image
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        context: ./
+        file: ./Dockerfile
+        push: true
+        tags: ${{secrets.DOCKERHUB_USERNAME}}/badging-bot:latest
+
+    - name: image digest
+      run: echo ${{steps.docker_build.outputs.digest}}
