--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -37,7 +37,7 @@ jobs:
       - run: npm test --if-present
         
       - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) --build-arg appId=${{secrets.APPID}} --build-arg privateKey=${{secrets.PRIVATEKEY}} --build-arg clientId=${{secrets.CLIENTID}} --build-arg clientSecret=${{secrets.CLIENTSECRET}} --build-arg webhookSecrect=${{secrets.WEBHOOKSECRET}} --build-arg PORT=${{secrets.PORT}} .
+        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -74,6 +74,12 @@ jobs:
             docker rm $(echo $IMAGE_NAME)
             # Run a new container from a new image
             docker run -d \
+            -e appId=${{secrets.APPID}} \
+            -e privateKey=${{secrets.PRIVATEKEY}} \
+            -e clientId=${{secrets.CLIENTID}} \
+            -e clientSecret=${{secrets.CLIENTSECRET}} \
+            -e webhookSecrect=${{secrets.WEBHOOKSECRET}} \
+            -e PORT=${{secrets.PORT}} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
