--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -74,6 +74,7 @@ jobs:
             docker rm $(echo $IMAGE_NAME)
             # Run a new container from a new image
             docker run -d \
+            - e appId=${{ secrets.APPID }} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
