--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -75,6 +75,11 @@ jobs:
             # Run a new container from a new image
             docker run -d \
             -e appId=${{ secrets.APPID }} \
+            -e privateKey=${{secrets.PRIVATEKEY}} \
+            -e clientSecret=${{secrets.CLIENTSECRET}} \
+            -e webhookSecret=${{secrets.WEBHOOKSECRET}} \
+            -e PORT=${{secrets.PORT}} \
+            -e clientId=${{secrets.CLIENTID}} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
