--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,7 +57,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          envs: IMAGE_NAME,REGISTRY,{{ secrets.DIGITALOCEAN_ACCESS_TOKEN }},GITHUB_SHA
+          envs: IMAGE_NAME,REGISTRY,${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }},GITHUB_SHA
           script: |
             # Login to registry
             docker login -u ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} -p ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }} registry.digitalocean.com
@@ -67,6 +67,12 @@ jobs:
             docker rm $(echo $IMAGE_NAME)
             # Run a new container from a new image
             docker run -d \
+            -e appId=${{ secrets.APPID }} \
+            -e privateKey=${{ secrets.PRIVATEKEY }} \
+            -e clientId=${{ secrets.CLIENTID }} \
+            -e clientSecret=${{ secrets.CLIENTSECRET }} \
+            -e webhookSecret=${{ secrets.WEBHOOKSECRET }} \
+            -e PORT=${{ secrets.PORT }} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
