--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,7 +30,14 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build \
+            --build-arg appId=${{ secrets.APPID }} \
+            --build-arg privateKey=${{ secrets.PRIVATEKEY }} \
+            --build-arg clientId=${{ secrets.CLIENTID }} \
+            --build-arg clientSecret=${{ secrets.CLIENTSECRET }} \
+            --build-arg webhookSecret=${{ secrets.WEBHOOKSECRET }} \
+            --build-arg PORT=${{ secrets.PORT }} \
+            -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
@@ -67,12 +74,6 @@ jobs:
             docker rm $(echo $IMAGE_NAME)
             # Run a new container from a new image
             docker run -d \
-            -e appId=${{ secrets.APPID }} \
-            -e privateKey=${{ secrets.PRIVATEKEY }} \
-            -e clientId=${{ secrets.CLIENTID }} \
-            -e clientSecret=${{ secrets.CLIENTSECRET }} \
-            -e webhookSecret=${{ secrets.WEBHOOKSECRET }} \
-            -e PORT=${{ secrets.PORT }} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
