--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,12 +31,12 @@ jobs:
         
       - name: Build container image
         run: docker build \
-            --build-arg appId=${{ secrets.APPID }} \
-            --build-arg privateKey=${{ secrets.PRIVATEKEY }} \
-            --build-arg clientId=${{ secrets.CLIENTID }} \
-            --build-arg clientSecret=${{ secrets.CLIENTSECRET }} \
-            --build-arg webhookSecret=${{ secrets.WEBHOOKSECRET }} \
-            --build-arg PORT=${{ secrets.PORT }} \
+            --build-arg appId="${{ secrets.APPID }}" \
+            --build-arg privateKey="${{ secrets.PRIVATEKEY }}" \
+            --build-arg clientId="${{ secrets.CLIENTID }}" \
+            --build-arg clientSecret="${{ secrets.CLIENTSECRET }}" \
+            --build-arg webhookSecret="${{ secrets.WEBHOOKSECRET }}" \
+            --build-arg PORT="${{ secrets.PORT }}" \
             -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
 
       - name: Install doctl
