--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Build container image
         run: docker build \
             --build-arg appId=${{ secrets.APPID }} \
-            --build-arg clientId=${{ secrets.CLIENTID }} \
-            --build-arg clientSecret=${{ secrets.CLIENTSECRET }} \
-            --build-arg webhookSecret=${{ secrets.WEBHOOKSECRET }} \
+            --build-arg clientId="${{ secrets.CLIENTID }}" \
+            --build-arg clientSecret="${{ secrets.CLIENTSECRET }}" \
+            --build-arg webhookSecret="${{ secrets.WEBHOOKSECRET }}" \
             --build-arg PORT=${{ secrets.PORT }} \
             -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
 
