--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,11 +29,8 @@ jobs:
       - name: Checkout the repo 
         uses: actions/checkout@v2
         
-      - name: check docker version
-        run: docker --version
-        
       - name: Build container image
-        run: docker build --build-arg appId=${{secrets.APPID}} -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build --build-arg appId=${{secrets.APPID}} --build-arg clientId=$clientId -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
             
 
       - name: Install doctl
