--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,8 +29,15 @@ jobs:
       - name: Checkout the repo 
         uses: actions/checkout@v2
         
+      - name: check env vars
+        run: |
+          $export appId=${{secrets.APPID}}
+          $export clientId=${{secrets.CLIENTID}}
+          $echo appId
+          $echo clientId
+        
       - name: Build container image
-        run: docker build --build-arg appId=${{secrets.APPID}} --build-arg clientId=${{secrets.CLIENTID}} $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
             
 
       - name: Install doctl
