--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,6 +22,10 @@ env:
   IMAGE_NAME: "badging-bot-v2"
   APPID: ${{secrets.APPID}}
   CLIENTID: ${{secrets.CLIENTID}} 
+  CLIENTSECRET: ${{secrets.CLIENTSECRET}}
+  WEBHOOKSECRET: ${{secrets.WEBHOOKSECRET}}
+  PRIVATEKEY: ${{secrets.PRIVATEKEY}}
+  PORT: ${{secrets.PORT}}
   
 #3
 jobs:
@@ -32,7 +36,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Build container image
-        run: docker build --build-arg appId=$(echo $APPID) --build-arg clientId=$(echo $CLIENTID) -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
+        run: docker build --build-arg appId=$(echo $APPID) --build-arg clientId=$(echo $CLIENTID) --build-arg clientSecret=$(echo $CLIENTSECRET) --build-arg webhookSecret=$(echo $WEBHOOKSECRET) --build-arg privateKey=$(echo $PRIVATEKEY) --build-arg PORT+$(echo $PORT) -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
             
 
       - name: Install doctl
