--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,85 +1,20 @@
 name: CI
-
-# 1
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push events but only for the master branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Image version'
-        required: true
-#2
-env:
-  REGISTRY: "registry.digitalocean.com/chaoss-badging"
-  IMAGE_NAME: "badging-bot-v2"
-  APPID: ${{secrets.APPID}}
-  CLIENTID: ${{secrets.CLIENTID}} 
-  CLIENTSECRET: ${{secrets.CLIENTSECRET}}
-  WEBHOOKSECRET: ${{secrets.WEBHOOKSECRET}}
-  PRIVATEKEY: ${{secrets.PRIVATEKEY}}
-  PORT: ${{secrets.PORT}}
-  
-#3
+    
 jobs:
-  build_and_push:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repo 
-        uses: actions/checkout@v2
-        
-      - name: Build container image
-        run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
-            
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-    
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 600
-      
-      - name: Remove all old images
-        run: if [ ! -z "$(doctl registry repository list | grep "$(echo $IMAGE_NAME)")" ]; then doctl registry repository delete-manifest $(echo $IMAGE_NAME) $(doctl registry repository list-tags $(echo $IMAGE_NAME) | grep -o "sha.*") --force; else echo "No repository"; fi
-
-      - name: Push image to DigitalOcean Container Registry
-        run: docker push $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
-        
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push
-    
-    steps:
-      - name: Deploy to Digital Ocean droplet via SSH action
-        uses: appleboy/ssh-action@master
-        env: 
-          IMAGE_NAME: $(echo $IMAGE_NAME)
-          REGISTRY: $(echo $REGISTRY)
-          DO_TOKEN: ${{secrets.DIGITALOCEAN_ACCESS_TOKEN}}
-          SHA: ${{ github.sha }}
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEY }}
-          port: ${{ secrets. DO_PORT }}
-          envs: IMAGE_NAME,REGISTRY,DO_TOKEN,GITHUB_SHA,SHA
-          script: |
-            # Login to registry
-            docker login -u $DO_TOKEN -p $DO_TOKEN registry.digitalocean.com
-            # Stop running container
-            docker stop $IMAGE_NAME
-            # Remove old container
-            docker rm $IMAGE_NAME
-            # Run a new container from a new image
-            docker run -d \
-            --restart always \
-            --name $IMAGE_NAME \
-            $REGISTRY/$IMAGE_NAME:$(echo $GITHUB_SHA | head -c7)
+    - name: executing remote ssh commands using password
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        port: ${{ secrets.PORT }}
+        script: whoami
