--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -59,5 +59,5 @@ jobs:
           docker rm $IMAGE
           docker run -d \
             --restart always \
-            --name $IMAGE_NAME \
-            $REGISTRY/$IMAGE_NAME:$(echo $GITHUB_SHA | head -c7)
+            --name $IMAGE \
+            $REGISTRY/$IMAGE:$(echo $GITHUB_SHA | head -c7)
