--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -56,6 +56,7 @@ jobs:
             -e clientSecret=${{ secrets.CLIENTSECRET }} \
             -e webhookSecret=${{ secrets.WEBHOOKSECRET }} \
             -e PORT=${{secrets.PORT}} \
+            -e privateKey=${{secrets.PRIVATEKEY}} \
             --restart always \
             --name $(echo $IMAGE_NAME) \
             $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7)
