--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,9 +12,22 @@ env:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+
     steps:
       - name: Checkout the repo 
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npx -y husky-init && npm ci
+      - run: npm run build --if-present
+      - run: npm test --if-present
         
       - name: Build container image
         run: docker build -t $(echo $REGISTRY)/$(echo $IMAGE_NAME):$(echo $GITHUB_SHA | head -c7) .
