implemented app auth tests

--- a/package.json
+++ b/package.json
@@ -16,18 +16,23 @@
     "format": "npm run prettier:fix && npm run lint:fix",
     "dev": "NODE_ENV=development nodemon index.js",
     "start": "NODE_ENV=production node index.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "npm run format && mocha"
   },
   "dependencies": {
     "dotenv": "16.0.0",
+    "express": "4.18.1",
     "octokit": "2.0.3"
   },
   "devDependencies": {
+    "chai": "4.3.6",
+    "chai-http": "4.3.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "^8.0.0",
     "lint-staged": "12.3.7",
+    "mocha": "10.0.0",
     "nodemon": "2.0.15",
     "prettier": "2.6.2",
     "smee-client": "1.2.2"
