--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "16.0.0",
     "express": "4.18.1",
+    "mongoose": "6.5.4",
     "octokit": "2.0.3"
   },
   "devDependencies": {
