--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -26,4 +26,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tag: latest
+          tags: badging-beta:latest
