--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -32,3 +32,11 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          secrets: |
+            "clientId=${{ secrets.CLIENTID }}"
+            "appId=${{ secrets.APPID }}"
+            "clientSecret=${{ secrets.CLIENTSECRET }}"
+            "webhookSecret=${{ secrets.WEBHOOKSECRET }}"
+            "PORT=${{ secrets.PORT }}"
+            "privateKey=${{ secrets.PRIVATEKEY }}"
+            "webhookURL=${{ secrets.BETA_URL }}"
