--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -39,3 +39,4 @@ jobs:
             webhookSecret=${{ secrets.WEBHOOKSECRET }}
             PORT=${{ secrets.PORT }}
             webhookURL=${{ secrets.BETA_URL }}
+            privateKey="${{ secrets.PRIVATEKEY }}"
