--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "prettier": "npx prettier . --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "dev": "NODE_ENV=development nodemon index.js",
+    "github-server": "NODE_ENV=development nodemon index.js",
+    "slack-server": "NODE_ENV=development nodemon slackBot.js",
     "start": "NODE_ENV=production node index.js",
     "prepare": "husky install",
-    "test": "npm run format && mocha"
+    "test": "npm run format && mocha",
+    "dev": "concurrently \"npm run github-server\" \"npm run slack-server\""
   },
   "dependencies": {
+    "@slack/bolt": "3.12.1",
+    "@slack/events-api": "3.0.1",
+    "@slack/socket-mode": "1.3.1",
+    "@slack/web-api": "6.7.2",
+    "concurrently": "7.4.0",
     "dotenv": "16.0.0",
     "express": "4.18.1",
     "mongoose": "6.5.4",
