--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "prettier": "npx prettier . --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "github-server": "NODE_ENV=development nodemon index.js",
-    "slack-server": "NODE_ENV=development nodemon slackBot.js",
-    "start": "NODE_ENV=production node index.js",
+    "github-dev": "NODE_ENV=development nodemon index.js",
+    "slack-dev": "NODE_ENV=development nodemon slackBot.js",
+    "github-prod": "NODE_ENV=production node index.js",
+    "slack-prod": "NODE_ENV=production node slackBot.js",
+    "start": "concurrently \"npm run github-prod\" \"npm run slack-prod\"",
     "prepare": "husky install",
     "test": "npm run format && mocha",
     "dev": "concurrently \"npm run github-server\" \"npm run slack-server\""
