changed recognition of events and scripts

--- a/package.json
+++ b/package.json
@@ -14,14 +14,10 @@
     "prettier": "npx prettier . --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix",
-    "github-dev": "NODE_ENV=development nodemon index.js",
-    "slack-dev": "NODE_ENV=development nodemon slackBot.js",
-    "github-prod": "NODE_ENV=production node index.js",
-    "slack-prod": "NODE_ENV=production node slackBot.js",
-    "start": "concurrently \"npm run github-prod\" \"npm run slack-prod\"",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
     "prepare": "husky install",
-    "test": "npm run format && mocha",
-    "dev": "concurrently \"npm run github-dev\" \"npm run slack-dev\""
+    "test": "npm run format && mocha"
   },
   "dependencies": {
     "@slack/bolt": "3.12.1",
