--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "lint-staged": "12.3.7",
     "mocha": "10.0.0",
     "nodemon": "2.0.15",
-    "prettier": "2.6.2",
-    "smee-client": "1.2.2"
+    "prettier": "2.6.2"
   },
   "engines": {
     "node": ">= 16.15.0"
