--- a/package.json
+++ b/package.json
@@ -20,30 +20,21 @@
     "test": "npm run format && mocha"
   },
   "dependencies": {
-    "@slack/bolt": "3.12.1",
-    "@slack/events-api": "3.0.1",
-    "@slack/socket-mode": "1.3.1",
-    "@slack/web-api": "6.7.2",
-    "concurrently": "7.4.0",
+    "@octokit/core": "4.2.0",
     "dotenv": "16.0.0",
     "express": "4.18.1",
+    "jsonwebtoken": "9.0.0",
     "mongoose": "6.5.4",
     "octokit": "2.0.3"
   },
   "devDependencies": {
-    "chai": "4.3.6",
-    "chai-http": "4.3.0",
     "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "husky": "^8.0.0",
     "lint-staged": "12.3.7",
-    "mocha": "10.0.0",
     "nodemon": "2.0.15",
     "prettier": "2.6.2"
-  },
-  "engines": {
-    "node": ">= 16.15.0"
   },
   "lint-staged": {
     ".": [
