--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "4.18.1",
     "jsonwebtoken": "9.0.0",
     "mongoose": "6.5.4",
-    "octokit": "2.0.3"
+    "octokit": "2.0.3",
+    "winston": "3.8.2",
+    "winston-daily-rotate-file": "4.7.1"
   },
   "devDependencies": {
     "eslint": "8.13.0",
