--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "husky": "^8.0.0",
     "lint-staged": "12.3.7",
     "nodemon": "2.0.15",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "smee-client": "1.2.3"
   },
   "lint-staged": {
     ".": [
